# shirt_size

./: Cargo.toml  README.md  build.sh
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/config/: config.toml
backend/src/: auth.rs  backend_config.rs  lib.rs  shirt_state.rs
docker/: .gitignore  Dockerfile  entrypoint.sh
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs
frontend/static/: tailwind_compiled.css
