[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
config = {version = "0.13.0", features = ["toml"]}
env_logger = "0.9"
thiserror = "1.0.30"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.2.1", features = ["v4"] }
futures-util = { version = "0.3.24", features = ["sink", "channel", "futures_01"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3.19"
tokio = { version = "1", features = ["full"] }
log = "0.4"
axum = { version = "0.5", features = ["ws"]}
tower-http = {version = "0.2", features = ["fs", "trace"]}
tower = "0.4.12"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1"
axum-sessions = "0.3"
