[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_json = "1.0.74"
sycamore = {version = "0.8.0", features = ["ssr", "suspense"]}
reqwasm = "0.3.1"
pulldown-cmark = "0.9"
web-sys = {version = "0.3.55", features = [
        "InputEvent", 
        "KeyboardEvent",
        "Location",
        "Storage",
        "HtmlSelectElement",
        "HtmlTextAreaElement",
        "EventSource",
        "ReadableStream",
        "ReadableStreamDefaultReader",
        "ReadableStreamByobReader",
        ]}
tracing-wasm = "0.2.1"
shirt-size-server = {path = "../backend"}
console_error_panic_hook = "0.1.7"
anyhow = "1.0.65"
futures = "0.3.24"
thiserror = "1.0.30"
wasm-bindgen = "0.2.82"
tracing = { version = "0.1.37", features = ["log"] }
getrandom = { version = "0.2.7", features = ["js"] }
gloo-net = "0.2.4"
eventsource-stream = "0.2.3"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
futures-timer = {version = "3.0.2", features = ["wasm-bindgen"]}
gloo-utils = "0.1.5"
